# unicase

./: Cargo.toml  README.md
.github/workflows/: rsgx.yml
src/: ascii.rs  lib.rs
src/unicode/: map.rs  mod.rs
