[package]

name = "unicase"
version = "2.6.0" # don't forget to update html_root_url
authors = ["Sean McArthur <sean@seanmonstar.com>"]
description = "A case-insensitive wrapper around strings."
repository = "https://github.com/seanmonstar/unicase"
documentation = "https://docs.rs/unicase"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["lowercase", "case", "case-insensitive", "case-folding", "no_std"]
categories = ["internationalization", "text-processing", "no-std"]
edition = "2018"

exclude = [
    "scripts/*"
]

build = "build.rs"

[build-dependencies]
version_check = "0.9"

[features]
nightly = []
default = []
with-testing = ["inventory", "testing"]

[dependencies.inventory]
optional    = true
version     = "0.1.6"

[dependencies.sgx_tstd]
features    = ["thread"]
git         = "https://github.com/apache/teaclave-sgx-sdk"
rev         = "v1.1.2"

[dependencies.testing]
branch      = "rsgx1.1.2"
git         = "https://github.com/sammyne/teaclave-testing"
optional    = true
